# simulation

./: CMakeLists.txt
src/: config.h  constants.h  main.c  misc.c  misc.h  settings.h  square.c  square.h  state.h
